# voice_to_text_ivrit

./: .gitignore  Dockerfile  Dockerfile.dev  PERFORMANCE_ANALYSIS.md  README.md  SPEAKER_INTEGRATION_PLAN.md  TRANSCRIPTION_QUICK_REFERENCE.md  batch_transcribe_unified.py  consolidate_chunks.py  create_docx.py  definition.py  env_template.txt  fast_speaker_test_chunk_1_20250830_153150.json  fast_speaker_test_chunk_1_20250830_153226.json  fast_speaker_test_chunk_1_20250830_161854.json  fast_speaker_test_chunk_1_20250830_162038.json  full_file_test.py  generate_final_output.py  infer.py  main.py  main_app.py  main_app_skip_transcription.py  monitor_chunks.py  process_all_chunk_jsons.py  process_last_chunks.py  process_quarterly_meeting_output.py  pyproject.toml  requirements.txt  root_config.json  run_output_processor_on_chunks.py  run_output_strategy.py  run_single_transcription.py  setup_pyannote.py  simple_main.py  simple_main_app.py  simple_output_processor.py  simple_speaker_test.py  simple_test.py  speaker_recognition_test_results_20250830_161854.json  speaker_recognition_test_results_20250830_162038.json  (+21 more)
.cursor/rules/: models.mdc  service.mdc
config/: ENGINE_CONFIGURATION_SUMMARY.md  README.md  batch_transcription_config.json  production.json
config/environments/: base.json  custom_whisper.json  development.json  docker_batch.json  ivrit.json  ivrit_high_accuracy.json  ivrit_whisper_large_v3_ct2.json  optimized_whisper.json  production.json  runpod.json  stable_whisper.json  test_no_speaker.json  voice_task.json
config/templates/: env_template.txt  environment-macos.yml  environment.yml
docs/: AVAILABLE_MODELS_SUMMARY.md  BATCH_TRANSCRIPTION_UNIFIED.md  CONVERSATION_FORMAT_FIX.md  DEPRECATED.md  DEVELOPMENT.md  INPUT_VALIDATION_USAGE.md  MODULAR_STRUCTURE.md  RTL_WORD_DOCUMENT_IMPROVEMENTS.md  TEST_ORGANIZATION.md  TEST_RESULTS_SUMMARY.md  TEST_VERIFICATION_SUMMARY.md  WORD_DOCUMENT_AND_MODEL_UPDATES.md  engine_optimization_summary.md  file_validation_refactoring_summary.md  ivrit_accuracy_improvements.md  logic_fixes_final_summary.md  logic_fixes_summary.md  logic_fixes_v2_summary.md  logic_fixes_v3_summary.md  logic_fixes_v4_summary.md  refactoring_guide.md  refactoring_phases_summary.md  refactoring_summary.md  result_builder_refactoring_summary.md  solid_improvements_summary.md  solid_principles_improvements.md
examples/: config_injection_example.py  input_validation_example.py  speaker_chunk_integration_example.py  speaker_service_injection_example.py
scripts/: README.md  clean_output.py  create_docx_only.py  download_faster_whisper_v2.py  download_ivrit_ct2_model.py  download_ivrit_model.py  infer.py  manage_outputs.py  monitor_progress.py  quick_start.py  setup.sh  test_small_chunk.py  verify_batch_processing.py  verify_config_injection.py
src/: __init__.py
src/clients/: __init__.py  audio_transcription_client.py  infer_client.py  send_audio.py
src/core/: __init__.py  application.py  application_refactored.py  audio_file_processor.py  input_processor.py  job_validator.py  output_processor.py  performance_monitor.py  speaker_config_factory.py  speaker_diarization.py  (+4 more)
tests/: __init__.py  run_tests.py  test_all_formats.py  test_batch_mock.py  test_batch_processing.py  test_config_system.py  test_conversation_format.py  test_local_transcription.py  test_new_output_structure.py  test_speaker_service.py
(+191 files in other folders)
